[package]
name = "hyttp"
version = "0.6.0"
authors = ["merl <merl.001.mia@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Hyper wrapper"

repository = "https://github.com/merl-twin/hyttp"
homepage = "https://github.com/merl-twin/hyttp"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
mime = "0.3"
hyper = { version = "0.14", features = ["client","server","http1","http2","tcp","stream"] }
hyper-tls = "0.5"
futures = "0.3"
tokio = { version = "1.5", features = ["net","rt","rt-multi-thread","time"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
url = "1.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
